<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="authority">br.com.fgr.emergencia.contentprovider</string>
    <string name="app_name">rescu.ee</string>
    <string name="title_activity_mapa">Mapa</string>
    <string name="icone_description">Rescuee</string>
    <string name="action_settings">Configurações</string>
    <string name="btnEmergencia">Emergência!</string>
    <string name="botao_hospitais_proximos">Buscar Hospitais Próximos</string>
    <string name="title_activity_localizacao">Lista de Hospitais</string>
    <string name="title_activity_ajuda_lista">AjudaLista</string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="unknow">Desconhecido</string>
    <string name="hospital">Hospital: </string>
    <string name="distancia">Distância: </string>
    <string name="tempo">Tempo: </string>
    <string name="meus_hospitais">Meus Hospitais</string>
    <string name="title_activity_formulario">Meu Cadastro</string>
    <string name="title_activity_recuperar_informacoes">Coletando Informações</string>
    <string name="title_activity_principal_fragment">PrincipalFragment</string>
    <string name="drawer_open">Abrir</string>
    <string name="drawer_close">Fechar</string>
    <string name="facebook_app_id">1564863630421264</string>
    <string name="title_activity_configuracao">Configurações</string>
    <string name="title_fragment_map">Mapa</string>
    <string name="label_modo">Modo: </string>

    <string-array name="lista_nav_drawer">
        <!-- <item>Meu Cadastro</item> -->
        <item>Configurações</item>
        <!--<item>Meus Hospitais</item>-->
        <!--<item>Sair</item>-->
    </string-array>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="sender_id">547482222385</string>
    <string name="email">E-mail:</string>
    <string name="hint_email">seu_nome@provedor.com.br</string>
    <string name="senha">Senha:</string>
    <string name="hint_senha">Seis dígitos ou mais</string>
    <string name="texto_botao_logar">Logar</string>
    <string name="text_raio">Raio:</string>
    <string name="text_hospitais">Hospitais:</string>
    <string name="button_gravar">Gravar</string>

    <!--Mensagens-->
    <string name="erro_comum">Não foi possível logar, tente novamente.</string>
    <string name="formato_invalido">Usuário e/ou senha com formato inválido.</string>
    <string name="info_invalida">Usuário e/ou senha incorretos.</string>
    <string name="info_valida">Usuário e senha corretos.</string>
    <string name="titulo_dialog_hospitais">Recuperando Informações</string>
    <string name="descricao_dialog_hospitais">Esperando informações de GPS e dados.</string>
    <string name="erro_sem_conexao">Sem conexão com a Internet.</string>
    <string name="nao_encontrou_hospitais">Não foi possível encontrar hospitais próximos. Ajuste o filtro e tente novamente.</string>

    <!-- SpinnerAdapter -->
    <string name="transporte_prompt">Escolha um meio de transporte</string>
    <string name="menu_filtrar_lista">Filtrar Lista</string>
    <string-array name="transportes_array">
        <item>Carro</item>
        <item>A Pé</item>
    </string-array>

    <string name="texto_ajuda_1">Ao TOCAR o item uma vez, você será levado ao mapa dos arredores do hospital, sendo mostrada a sua localização.</string>
    <string name="text_ajuda_2">Porém, ao SEGURAR o item, você será levado ao aplicativo de navegação para chegar ao hospital.</string>
    <string name="button_entendi">ENTENDI</string>
    <string name="lbl_quilometragem_base">5km</string>
    <string name="lbl_nro_hospitais_base">5</string>
    <string name="splash_description">Apresentação</string>
    <string name="text_btn_mapa">MAPA</string>
    <string name="text_btn_navegacao">NAVEGAÇÃO</string>
    <string name="title_activity_tab_example">TabExampleActivity</string>

    <string name="hello_world">Hello world!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_success">Salvo com sucesso.</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="filter_rescuee">filter_rescuee</string>

</resources>