<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinza"
    android:fitsSystemWindows="true"
    tools:context=".ui.activities.ConfigurationActivity">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/vermelho_rescuee" />

    <RelativeLayout
        android:id="@+id/rl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:padding="10dp">

        <TextView
            android:id="@+id/lbl_radius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_raio"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grafite" />

        <SeekBar
            android:id="@+id/seek_radius"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/lbl_radius"
            android:layout_alignLeft="@+id/seek_hospitals"
            android:layout_alignStart="@+id/seek_hospitals"
            android:layout_alignTop="@+id/lbl_radius"
            android:max="3" />

        <TextView
            android:id="@+id/lbl_info_radius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@+id/seek_radius"
            android:layout_toRightOf="@+id/seek_radius"
            android:gravity="center_vertical"
            android:text="@string/lbl_quilometragem_base"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grafite" />

        <TextView
            android:id="@+id/lbl_hospitals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seek_radius"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:text="@string/text_hospitais"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grafite" />

        <SeekBar
            android:id="@+id/seek_hospitals"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/lbl_hospitals"
            android:layout_alignTop="@+id/lbl_hospitals"
            android:layout_below="@+id/seek_radius"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/lbl_hospitals"
            android:layout_toRightOf="@+id/lbl_hospitals"
            android:max="2" />

        <TextView
            android:id="@+id/lbl_info_hospitals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/seek_hospitals"
            android:layout_alignLeft="@+id/lbl_info_radius"
            android:layout_alignStart="@+id/lbl_info_radius"
            android:layout_alignTop="@+id/seek_hospitals"
            android:layout_below="@+id/seek_radius"
            android:layout_toEndOf="@+id/seek_hospitals"
            android:layout_toRightOf="@+id/seek_hospitals"
            android:gravity="center_vertical"
            android:text="@string/lbl_nro_hospitais_base"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grafite" />

        <TextView
            android:id="@+id/lbl_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/spinner_transport"
            android:layout_alignTop="@+id/spinner_transport"
            android:layout_below="@+id/seek_hospitals"
            android:gravity="center_vertical"
            android:text="@string/label_modo"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grafite" />

        <Spinner
            android:id="@+id/spinner_transport"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/seek_hospitals"
            android:layout_alignStart="@+id/seek_hospitals"
            android:layout_below="@+id/seek_hospitals"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@+id/lbl_mode"
            android:layout_toRightOf="@+id/lbl_mode"
            android:prompt="@string/transporte_prompt"
            android:spinnerMode="dialog" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_transport"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@color/grafite"
            android:padding="16dp"
            android:text="@string/button_gravar"
            android:textAppearance="?android:attr/textAppearanceButton"
            android:textColor="@color/branco" />

    </RelativeLayout>

</RelativeLayout>