<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinza"
    tools:context="br.com.fgr.emergencia.ui.activities.LoginActivity"
    >

  <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/vermelho_rescuee"
      />

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_below="@+id/toolbar"
      >

    <RelativeLayout
        android:id="@+id/layout_conteudo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        >

      <android.support.v7.widget.AppCompatEditText
          android:id="@+id/text_email"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:enabled="false"
          android:focusable="false"
          android:text="@string/email"
          android:textAppearance="?android:attr/textAppearanceMedium"
          android:textColor="@color/grafite"
          />

      <android.support.v7.widget.AppCompatEditText
          android:id="@+id/edit_email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignBottom="@+id/text_email"
          android:layout_marginLeft="5dp"
          android:layout_marginStart="5dp"
          android:layout_toEndOf="@+id/text_email"
          android:layout_toRightOf="@+id/text_email"
          android:hint="@string/hint_email"
          android:inputType="textEmailAddress"
          android:textAppearance="?android:attr/textAppearanceMedium"
          android:textColor="@color/grafite"
          android:textColorHint="@color/hint"
          />

      <android.support.v7.widget.AppCompatEditText
          android:id="@+id/text_senha"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/text_email"
          android:layout_marginTop="7dp"
          android:enabled="false"
          android:focusable="false"
          android:text="@string/senha"
          android:textAppearance="?android:attr/textAppearanceMedium"
          android:textColor="@color/grafite"
          />

      <android.support.v7.widget.AppCompatEditText
          android:id="@+id/edit_senha"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignBottom="@+id/text_senha"
          android:layout_marginLeft="5dp"
          android:layout_marginStart="5dp"
          android:layout_toEndOf="@+id/text_senha"
          android:layout_toRightOf="@+id/text_senha"
          android:fontFamily="sans-serif"
          android:hint="@string/hint_senha"
          android:inputType="textPassword"
          android:textAppearance="?android:attr/textAppearanceMedium"
          android:textColor="@color/grafite"
          android:textColorHint="@color/hint"
          />

      <android.support.v7.widget.AppCompatButton
          android:id="@+id/button_logar"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/text_senha"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="20dp"
          android:background="@color/grafite"
          android:text="@string/texto_botao_logar"
          android:textAppearance="?android:attr/textAppearanceButton"
          />

      <RelativeLayout
          android:id="@+id/rl_separacao"
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:layout_below="@+id/button_logar"
          android:layout_marginBottom="10dp"
          android:layout_marginTop="10dp"
          android:background="@color/black_translucent"
          />

      <com.facebook.widget.LoginButton
          android:id="@+id/authButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/rl_separacao"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="20dp"
          />

    </RelativeLayout>

  </ScrollView>

</RelativeLayout>